Intégration Media Queries du Header

--- a/index.html
+++ b/index.html
@@ -42,15 +42,18 @@
               />
           </form>
         </div>
-        <div class="header1__gris__txtBtn">
-          <h1 class="header1__gris__txtBtn__h1">Réservez le menu qui vous convient</h1>
-          <p class="header1__gris__txtBtn__p">Découvrez des restaurants d'exception,
+
+        <div class="header1__gris__txt">
+          <h1 class="header1__gris__txt__h1">Réservez le menu qui vous convient</h1>
+          <p class="header1__gris__txt__p">Découvrez des restaurants d'exception,
             sélectionnés par nos soins.
           </p>
-        <div class="header1__gris__txtBtn__btnOpacity">
-          <div class="header1__gris__txtBtn__btnP"><a href="#">Explorer nos restaurants</a></div>
+        </div>
+        <div class="header1__gris__BtnOpacity">
+          <div class="header1__gris__BtnOpacity__btnP"><a href="#">Explorer nos restaurants</a></div>
           <!-- <div class="header1__gris__txtBtn__btnS"><a href="#">Explorer nos restaurants</a></div> -->
         </div>
+      
       </div>
       </div>
     </header>
