--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
-    <title>La Palette du Goût</title>
+    <title>À la française</title>
   </head>
 
   <body>
@@ -21,14 +21,14 @@
         <img src="images\logo\ohmyfood@2x.svg" alt="logo">
       </div>
       <div class="header1__bkgnd">
-        <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
+        <img  src="images\restaurants\toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la Française">
       </div>
     </header>
 
     <section class="Menu">
 
         <div class="Menu__NomResto">
-            <h1>La Palette du Goût</h1>
+            <h1>À la française</h1>
             <div class="restaurant__gris__carte__bas__icone">
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-regular fa-heart"></i>
@@ -46,9 +46,9 @@
                 <h2>Entrées</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Fricassée d'escargot</h3>
+                        <h3>Tartare de poulpe acidulé</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Au piment d'Espelette</p>
+                            <p>Aux zestes d'orange</p>
                             <p>25€</p>
                         </div>
                     </div>
@@ -60,9 +60,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Foie gras de canard mi-cuit</h3>
+                        <h3>Velouté de légumes d'antan</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Carotte, panais, topinambour</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -74,10 +74,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Oeuf au plat</h3>
+                        <h3>Soupe à l'oignon</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Assaisonné à la truffe sur lit de caviar</p>
+                                Revisitée</p>
                             <p>20€</p>
                         </div>
                     </div>
@@ -96,9 +96,9 @@
                 <h2>Plats</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de boeuf aux herbes</h3>
+                        <h3>Coquilles Saint-Jacques</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Accompagnées d'une purée de panais</p>
                             <p>40€</p>
                         </div>
                     </div>
@@ -110,9 +110,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Parmentier de queue de boeuf</h3>
+                        <h3>Magret de canard</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p>Et parmentier de pommes de terre</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -124,10 +124,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de turbot</h3>
+                        <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Aux agrumes</p>
+                                Sur son lit de gnocchis aux légumes</p>
                             <p>44€</p>
                         </div>
                     </div>
@@ -145,9 +145,9 @@
                 <h2>Desserts</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Paris-Brest</h3>
+                        <h3>Pétales de violettes glacés</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Revisité</p>
+                            <p>Et purée de noisettes</p>
                             <p>18€</p>
                         </div>
                     </div>
@@ -159,9 +159,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Macaron au chocolat d'exception </h3>
+                        <h3>Fondant au chocolat</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisité</p>
                             <p>22€</p>
                         </div>
                     </div>
@@ -173,10 +173,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Mousse au chocolat</h3>
+                        <h3>Millefeuille croustillant</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Au piment d'Espelette et à la truffe noire</p>
+                                Myrtilles et pâte d’amande</p>
                             <p>23€</p>
                         </div>
                     </div>
