--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
-    <title>La Palette du Goût</title>
+    <title>La Note Enchantée</title>
   </head>
 
   <body>
@@ -21,14 +21,14 @@
         <img src="images\logo\ohmyfood@2x.svg" alt="logo">
       </div>
       <div class="header1__bkgnd">
-        <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
+        <img src="images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note Enchantée">
       </div>
     </header>
 
     <section class="Menu">
 
         <div class="Menu__NomResto">
-            <h1>La Palette du Goût</h1>
+            <h1>La Note Enchantée</h1>
             <div class="restaurant__gris__carte__bas__icone">
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-regular fa-heart"></i>
@@ -46,9 +46,9 @@
                 <h2>Entrées</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Fricassée d'escargot</h3>
+                        <h3>Ravioles de foie gras</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Au piment d'Espelette</p>
+                            <p>Accompagnés de leur crème à la truffe</p>
                             <p>25€</p>
                         </div>
                     </div>
@@ -60,9 +60,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Foie gras de canard mi-cuit</h3>
+                        <h3>Caviar osciètre </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Sur blini à la farine de blé noir</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -74,11 +74,26 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Oeuf au plat</h3>
+                        <h3>Homard et espuma de potiron</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Assaisonné à la truffe sur lit de caviar</p>
+                                Mariné aux zestes d'orange</p>
                             <p>20€</p>
+                        </div>
+                    </div>
+                    <div class="Menu__carte__partie__choix__caché">
+                        <a ref="#">
+                            <i></i>
+                        </a>
+                    </div>                    
+                </div>
+                <div class="Menu__carte__partie__choix">
+                    <div class="Menu__carte__partie__choix__visible">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <div class="Menu__carte__partie__choix__visible__txt">
+                            <p>
+                                Confiture de figue et pain toasté</p>
+                            <p>35€</p>
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
@@ -96,9 +111,9 @@
                 <h2>Plats</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de boeuf aux herbes</h3>
+                        <h3>Noix de coquilles Saint-Jacques</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Sur lit de purée de céleri-rave</p>
                             <p>40€</p>
                         </div>
                     </div>
@@ -110,9 +125,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Parmentier de queue de boeuf</h3>
+                        <h3>Langoustine poêlée</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p>Purée de patate douce</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -124,10 +139,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de turbot</h3>
+                        <h3>Mijoté de queue de boeuf</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Aux agrumes</p>
+                                Et riz sauvage aux zestes de citron</p>
                             <p>44€</p>
                         </div>
                     </div>
@@ -145,9 +160,9 @@
                 <h2>Desserts</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Paris-Brest</h3>
+                        <h3>Macaron noisette et chocolat</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Revisité</p>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                             <p>18€</p>
                         </div>
                     </div>
@@ -159,9 +174,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Macaron au chocolat d'exception </h3>
+                        <h3>Baba au rhum revisité  </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Avec son coulis de citron</p>
                             <p>22€</p>
                         </div>
                     </div>
@@ -173,10 +188,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Mousse au chocolat</h3>
+                        <h3>Tarte au citron meringuée </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Au piment d'Espelette et à la truffe noire</p>
+                                Déstructurée</p>
                             <p>23€</p>
                         </div>
                     </div>
