--- a/LeDelicedesSens.html
+++ b/LeDelicedesSens.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
-    <title>La Palette du Goût</title>
+    <title>Le délice des sens</title>
   </head>
 
   <body>
@@ -21,14 +21,14 @@
         <img src="images\logo\ohmyfood@2x.svg" alt="logo">
       </div>
       <div class="header1__bkgnd">
-        <img src="images\restaurants\jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du Goût">
+        <img src="images\restaurants\louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Délice des Sens">
       </div>
     </header>
 
     <section class="Menu">
 
         <div class="Menu__NomResto">
-            <h1>La Palette du Goût</h1>
+            <h1>Le délice des sens</h1>
             <div class="restaurant__gris__carte__bas__icone">
                 <i class="fa-solid fa-heart"></i>
                 <i class="fa-regular fa-heart"></i>
@@ -46,9 +46,9 @@
                 <h2>Entrées</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Fricassée d'escargot</h3>
+                        <h3>Tartare de thon</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Au piment d'Espelette</p>
+                            <p>Assaisonné au yuzu</p>
                             <p>25€</p>
                         </div>
                     </div>
@@ -60,9 +60,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Foie gras de canard mi-cuit</h3>
+                        <h3>Bouchée de homard croustillant </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et ses copeaux de truffe noire</p>
+                            <p>Et sa farandole de petits légumes</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -74,10 +74,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Oeuf au plat</h3>
+                        <h3>Velouté de cèpes</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Assaisonné à la truffe sur lit de caviar</p>
+                                Aux truffes</p>
                             <p>20€</p>
                         </div>
                     </div>
@@ -96,9 +96,9 @@
                 <h2>Plats</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de boeuf aux herbes</h3>
+                        <h3>Poulet rôti aux herbes de Provence </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <p>Et sa crème de truffe</p>
                             <p>40€</p>
                         </div>
                     </div>
@@ -110,9 +110,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Parmentier de queue de boeuf</h3>
+                        <h3>Langouste rôtie</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <p>Et ses légumes de saison</p>
                             <p>35€</p>
                         </div>
                     </div>
@@ -124,10 +124,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Filet de turbot</h3>
+                        <h3>Côte de boeuf Angus </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Aux agrumes</p>
+                                Et sa purée de panais</p>
                             <p>44€</p>
                         </div>
                     </div>
@@ -145,9 +145,9 @@
                 <h2>Desserts</h2>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Paris-Brest</h3>
+                        <h3>Farandole de desserts</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Revisité</p>
+                            <p>Du chef</p>
                             <p>18€</p>
                         </div>
                     </div>
@@ -159,9 +159,9 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Macaron au chocolat d'exception </h3>
+                        <h3>Crème brulée</h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <p>Revisité</p>
                             <p>22€</p>
                         </div>
                     </div>
@@ -173,10 +173,10 @@
                 </div>
                 <div class="Menu__carte__partie__choix">
                     <div class="Menu__carte__partie__choix__visible">
-                        <h3>Mousse au chocolat</h3>
+                        <h3>Tiramisu </h3>
                         <div class="Menu__carte__partie__choix__visible__txt">
                             <p>
-                                Au piment d'Espelette et à la truffe noire</p>
+                                À la noisette</p>
                             <p>23€</p>
                         </div>
                     </div>
