--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -17,11 +17,11 @@
       
     <header class="header1">
       <div class="header1__logo">
-          <i class="fa-solid fa-arrow-left"></i>
-        <img src="images\logo\ohmyfood@2x.svg" alt="logo">
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <img src="images/logo/ohmyfood@2x.svg" alt="logo">
       </div>
       <div class="header1__bkgnd">
-        <img src="images\restaurants\stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note Enchantée">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La Note Enchantée">
       </div>
     </header>
 
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -118,7 +118,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -132,7 +132,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -167,7 +167,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -181,7 +181,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="Menu__carte__partie__choix__caché">
-                        <a ref="#">
+                        <a href="#">
                             <i></i>
                         </a>
                     </div>                    
@@ -210,21 +210,21 @@
 
     <footer>
         <!-- <div class="footer__logo"> -->
-          <!-- <img class="footer__logo__img" src="images\logo\ohmyfood@2x.svg" alt="logo"> </div>-->
+          <!-- <img class="footer__logo__img" src="images/logo/ohmyfood@2x.svg" alt="logo"> </div>-->
           <h3 class="footer__logoBlanc">ohmyfood</h3>
         
         <ul class="footer__menu">
           <li class="footer__menu__lien">
-            <i class="fa-solid fa-utensils"></i><a ref="#">Proposer un restaurant</a>
+            <i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a>
           </li>
           <li class="footer__menu__lien">
-            <i class="fa-solid fa-handshake-angle"></i><a ref="#">Devenir partenaire</a>
+            <i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
           </li>
           <li class="footer__menu__lien2">
-            <a ref="#">Mentions légales</a>
+            <a href="#">Mentions légales</a>
           </li>
           <li class="footer__menu__lien2">
-            <a ref="#">Contact</a>
+            <a href="#">Contact</a>
           </li>
         </ul>
       </footer>
