Ajout du meta viewport sur les fichiers html
C'est cette ligne qui rend possible le responsive en permettant au code de detecter et de controller les dimensions de l'ecran

- Ajout d'un fichier de configuration vscode "settings.json" dans lequel est precisé la config de live sass que nous utilisons
- Correction d'un leger décalage vers la droite de toute la page d'acceuil. Il s'agissait de la largeur des titres fonctionnement & restaurants qui debordaient un peu a la droite
- Petite mise en forme de code avec prettier

--- a/laPaletteDuGout.html
+++ b/laPaletteDuGout.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/menu.css" />
 
@@ -14,7 +14,7 @@
   </head>
 
   <body>
-    <header  class="header1">
+    <header class="header1">
       <div id="header" class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
@@ -37,13 +37,12 @@
       </div>
 
       <div id="Menu__carte">
-
         <!-- ENTREES -->
-          <h2>Entrées</h2>
-          <div class="h2__bord"></div>
+        <h2>Entrées</h2>
+        <div class="h2__bord"></div>
 
-          <div id="entrees" class="partie">
-            <div class="partie__choix">
+        <div id="entrees" class="partie">
+          <div class="partie__choix">
             <div class="partie__choix__vue">
               <div class="partie__choix__vue__txt">
                 <h3>Fricassée d'escargot</h3>
@@ -98,17 +97,16 @@
         </div>
 
         <!-- PLATS -->
-          <h2>Plats</h2>
-          <div class="h2__bord"></div>
+        <h2>Plats</h2>
+        <div class="h2__bord"></div>
 
-          <div id="plats" class="partie">
-
+        <div id="plats" class="partie">
           <!-- plat1 -->
           <div class="partie__choix">
             <div class="partie__choix__vue">
               <div class="partie__choix__vue__txt">
                 <h3>Filet de boeuf aux herbes</h3>
-          <p>Accompagné de sa ribambelle de légumes</p>
+                <p>Accompagné de sa ribambelle de légumes</p>
               </div>
 
               <div class="partie__choix__vue__prix">
@@ -145,7 +143,7 @@
             <div class="partie__choix__vue">
               <div class="partie__choix__vue__txt">
                 <h3>Filet de turbot</h3>
-    <p>Aux agrumes</p>
+                <p>Aux agrumes</p>
               </div>
 
               <div class="partie__choix__vue__prix">
@@ -162,11 +160,10 @@
         </div>
 
         <!-- DESSERTS -->
-          <h2>Desserts</h2>
-          <div class="h2__bord"></div>
-          
-          <div id="desserts" class="partie">
+        <h2>Desserts</h2>
+        <div class="h2__bord"></div>
 
+        <div id="desserts" class="partie">
           <!-- d1 -->
           <div class="partie__choix">
             <div class="partie__choix__vue">
@@ -189,7 +186,7 @@
             <div class="partie__choix__vue">
               <div class="partie__choix__vue__txt">
                 <h3>Macaron au chocolat d'exception</h3>
-      <p>Et glace à la vanille de Madagascar</p>
+                <p>Et glace à la vanille de Madagascar</p>
               </div>
 
               <div class="partie__choix__vue__prix">
