mise en place des ancres (ne fonctionne pas sur firefox), changement du nom de la classe du bouton, taille de l'arc du loading spinner dans une variable, mise en place de mediaquery supplémentaire pour la marge entre icone et texte dans fonctionnement dans acceuil.scss, modification  du hover dans menu.scss permettant au chek vert de fonctionner correctement jusqu'à 300px de largeur d'écran

--- a/LeDelicedesSens.html
+++ b/LeDelicedesSens.html
@@ -10,10 +10,17 @@
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
-    <title>La Note Enchantée</title>
+    <title>Le Délice des Sens</title>
   </head>
 
   <body>
+   
+    <div class="loading">
+      <div id="ancre"></div>
+      
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo">
+      <div class="arc"></div>
+    </div>
     <header class="header1">
       <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
@@ -21,15 +28,15 @@
       </div>
       <div class="header1__bkgnd">
         <img
-          src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-          alt="La Note Enchantée"
+          src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+          alt="Le Délice des Sens"
         />
       </div>
     </header>
 
     <section id="Menu">
       <div class="NomResto">
-        <h1>La Note Enchantée</h1>
+        <h1>Le Délice des Sens</h1>
         <div class="NomResto__icone">
           <i class="fa-solid fa-heart"></i>
           <i class="fa-regular fa-heart"></i>
