--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -14,6 +14,13 @@
   </head>
 
   <body>
+    <div id="ancre"></div>
+    <div class="loading">
+      
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo">
+      <div class="arc"></div>
+    </div>
+
     <header class="header1">
       <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
@@ -21,8 +28,8 @@
       </div>
       <div class="header1__bkgnd">
         <img
-          src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-          alt="La Note Enchantée"
+        src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        alt="A la Française"
         />
       </div>
     </header>
