--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
     <link rel="stylesheet" href="css/menu.css" />
 
     <script
@@ -14,6 +14,12 @@
   </head>
 
   <body>
+    <div id="ancre"></div>
+    <div class="loading">
+      
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo">
+      <div class="arc"></div>
+    </div>
     <header class="header1">
       <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
@@ -236,9 +242,9 @@
       </div>
     </section>
 
-    <div class="header1__gris__BtnOpacity">
-      <a class="header1__gris__BtnOpacity__btnP" href="#">Commander</a>
-      <a class="header1__gris__BtnOpacity__btnS" href="#">Commander</a>
+    <div class="BtnOpacity">
+      <a class="BtnOpacity__btnP" href="#">Commander</a>
+      <a class="BtnOpacity__btnS" href="#">Commander</a>
     </div>
 
     <footer class="footer">
