--- a/laPaletteDuGout.html
+++ b/laPaletteDuGout.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/menu.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/menu.css" />
 
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
@@ -14,8 +14,14 @@
   </head>
 
   <body>
+    <div id="ancre"></div>
+    <div class="loading">
+      <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
+      <div class="arc"></div>
+    </div>
     <header class="header1">
-      <div id="header" class="header1__logo">
+      
+      <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
       </div>
@@ -219,9 +225,9 @@
       </div>
     </section>
 
-    <div class="header1__gris__BtnOpacity">
-      <a class="header1__gris__BtnOpacity__btnP" href="#Menu">Commander</a>
-      <a class="header1__gris__BtnOpacity__btnS" href="#Menu">Commander</a>
+    <div class="BtnOpacity">
+      <a class="BtnOpacity__btnP" href="#ancre">Commander</a>
+      <a class="BtnOpacity__btnS" href="#ancre">Commander</a>
     </div>
 
     <footer class="footer">
