Débug  erreur "favicon" sur l'inspecteur Retouche font-size footer Sauvegarde scss avant changement de la hierarchie des titres suite warning validateur html Co-authored-by: brainafesoh <brainafesoh@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/accueil.css" />
+    <link rel="icon" type="image/x-icon" href="#" />
 
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
@@ -33,7 +34,7 @@
             <i class="fa-solid fa-location-dot"></i>
           </div>
 
-          <form class="header1__gris__form__label" method="#" action="#">
+          <form class="header1__gris__form__label" method="post" action="#">
             <input
               class="entreeVille"
               type="search"
@@ -91,10 +92,9 @@
         </div>
       </div>
     </section>
-<div id="restaurants"></div>
+    <div id="restaurants"></div>
     <section class="restaurant">
-      
-      <h1  class="restaurant__titre">Restaurants</h1>
+      <h1 class="restaurant__titre">Restaurants</h1>
       <div class="restaurant__gris">
         <a class="carte" href="laPaletteDuGout.html#ancre">
           <div class="carte__img">
