--- a/laPaletteDuGout.html
+++ b/laPaletteDuGout.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="css/menu.css" />
-
+    <link rel="icon" type="image/x-icon" href="#" />
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
@@ -14,13 +14,12 @@
   </head>
 
   <body>
-    <div id="ancre"></div>
     <div class="loading">
       <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
       <div class="arc"></div>
     </div>
     <header class="header1">
-      
+      <div id="ancre"></div>
       <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
