--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="css/normalize.css" /> -->
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/menu.css" />
+    <link rel="icon" type="image/x-icon" href="#" />
 
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
