--- a/LeDelicedesSens.html
+++ b/LeDelicedesSens.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/menu.css" />
-
+    <link rel="icon" type="image/x-icon" href="#" />
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
