--- a/LaNoteEnchantee.html
+++ b/LaNoteEnchantee.html
@@ -244,8 +244,8 @@
     </section>
 
     <div class="BtnOpacity">
-      <a class="BtnOpacity__btnP" href="#">Commander</a>
-      <a class="BtnOpacity__btnS" href="#">Commander</a>
+      <a class="BtnOpacity__btnP" href="#ancre">Commander</a>
+      <a class="BtnOpacity__btnS" href="#ancre">Commander</a>
     </div>
 
     <footer class="footer">
