--- a/LeDelicedesSens.html
+++ b/LeDelicedesSens.html
@@ -227,9 +227,9 @@
       </div>
     </section>
 
-    <div class="header1__gris__BtnOpacity">
-      <a class="header1__gris__BtnOpacity__btnP" href="#">Commander</a>
-      <a class="header1__gris__BtnOpacity__btnS" href="#">Commander</a>
+    <div class="BtnOpacity">
+      <a class="BtnOpacity__btnP" href="#ancre">Commander</a>
+      <a class="BtnOpacity__btnS" href="#ancre">Commander</a>
     </div>
 
     <footer class="footer">
