--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -10,7 +10,7 @@
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
-    <title>La Note Enchantée</title>
+    <title>A la Française</title>
   </head>
 
   <body>
@@ -36,7 +36,7 @@
 
     <section id="Menu">
       <div class="NomResto">
-        <h1>La Note Enchantée</h1>
+        <h1>A la Française</h1>
         <div class="NomResto__icone">
           <i class="fa-solid fa-heart"></i>
           <i class="fa-regular fa-heart"></i>
@@ -227,9 +227,9 @@
       </div>
     </section>
 
-    <div class="header1__gris__BtnOpacity">
-      <a class="header1__gris__BtnOpacity__btnP" href="#">Commander</a>
-      <a class="header1__gris__BtnOpacity__btnS" href="#">Commander</a>
+    <div class="BtnOpacity">
+      <a class="BtnOpacity__btnP" href="#ancre">Commander</a>
+      <a class="BtnOpacity__btnS" href="#ancre">Commander</a>
     </div>
 
     <footer class="footer">
