correction des imports dans acceuil.scss

--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
           </p>
         </div>
         <div class="BtnOpacity">
-          <a class="BtnOpacity__btnP" href="#">Explorer nos restaurants</a>
-          <a class="BtnOpacity__btnS" href="#restaurants"
-            >Explorer nos restaurants</a
-          >
+          <a class="BtnOpacity__btnP" href="#restaurants">Explorer nos restaurants</a>
+          <a class="BtnOpacity__btnS" href="#restaurants">Explorer nos restaurants</a>
         </div>
       </div>
     </header>
