correction des mailto dans les footer et ajout d'une media query sur #Menu

--- a/LeDelicedesSens.html
+++ b/LeDelicedesSens.html
@@ -249,7 +249,7 @@
           <a href="#">Mentions légales</a>
         </li>
         <li class="footer__menu__lien2">
-          <a href="mailto:magenligne@outlook.fr?subject=Demande d'information sur OhMyFood">Contact</a>
+          <a href="mailto:magenligne@outlook.fr?subject=OhMyFood">Contact</a>
         </li>
       </ul>
     </footer>
