Simplification du bouton

--- a/AlaFrancaise.html
+++ b/AlaFrancaise.html
@@ -5,27 +5,37 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/menu.css" />
+
     <link rel="icon" type="image/x-icon" href="#" />
+
     <script
       src="https://kit.fontawesome.com/d4d5c38d7c.js"
       crossorigin="anonymous"
     ></script>
+
     <title>A la Française</title>
   </head>
 
+
   <body>
+
+    <!-- ANCRE POUR LIEN CARTE PAGE ACCEUIL -->
     <div id="ancre"></div>
-    <div class="loading">
-      
+
+    <!-- LOADING SPINNER -->
+    <div class="loading">      
       <img src="images/logo/ohmyfood@2x.svg" alt="logo">
       <div class="arc"></div>
     </div>
 
+
+    <!-- HEADER -->
     <header class="header1">
       <div class="header1__logo">
         <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <img src="images/logo/ohmyfood@2x.svg" alt="logo" />
       </div>
+
       <div class="header1__bkgnd">
         <img
         src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
@@ -34,7 +44,9 @@
       </div>
     </header>
 
+    <!-- MENU -->
     <section id="Menu">
+
       <div class="NomResto">
         <h1>A la Française</h1>
         <div class="NomResto__icone">
@@ -44,11 +56,13 @@
       </div>
 
       <div id="Menu__carte">
+
         <!-- ENTREES -->
 
         <h2>Entrées</h2>
-        <div class="h2__bord"></div>
+        <div class="h2__bord"></div>        
         <div id="entrees" class="partie">
+
           <div class="partie__choix">
             <div class="partie__choix__vue">
               <div class="partie__choix__vue__txt">
@@ -107,7 +121,6 @@
         <!-- PLATS -->
         <h2>Plats</h2>
         <div class="h2__bord"></div>
-
         <div id="plats" class="partie">
           <!-- plat1 -->
           <div class="partie__choix">
@@ -228,7 +241,6 @@
     </section>
 
     <div class="BtnOpacity">
-      <a class="BtnOpacity__btnP" href="#ancre">Commander</a>
       <a class="BtnOpacity__btnS" href="#ancre">Commander</a>
     </div>
 
