--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <div class="arc"></div>
     </div>
 
+
+
+    <!-- HEADER -->
     <header class="header1">
       <div class="header1__logo">
         <img
@@ -54,11 +57,15 @@
           </p>
         </div>
         <div class="BtnOpacity">
-          <a class="BtnOpacity__btnP" href="#restaurants">Explorer nos restaurants</a>
-          <a class="BtnOpacity__btnS" href="#restaurants">Explorer nos restaurants</a>
+          <a class="BtnOpacity__btnS" href="#restaurants"
+            >Explorer nos restaurants</a
+          >
         </div>
       </div>
     </header>
+
+
+    <!-- FONCTIONNEMENT -->
 
     <section class="fonctionnement">
       <h2 class="fonctionnement__titre">Fonctionnement</h2>
@@ -90,11 +97,19 @@
         </div>
       </div>
     </section>
+
+    <!-- ANCRE POUR LIEN BOUTON ROSE -->
     <div id="restaurants"></div>
 
+
+<!-- RESTAURANTS -->
+
     <section class="restaurant">
+
       <h2 class="restaurant__titre">Restaurants</h2>
+
       <div class="restaurant__gris">
+
         <a class="carte" href="laPaletteDuGout.html#ancre">
           <div class="carte__img">
             <img
@@ -114,6 +129,7 @@
             </div>
           </div>
         </a>
+
         <a class="carte" href="LaNoteEnchantee.html#ancre">
           <div class="carte__img">
             <img
@@ -133,6 +149,7 @@
             </div>
           </div>
         </a>
+
         <a class="carte" href="AlaFrancaise.html#ancre">
           <div class="carte__img">
             <img
@@ -151,6 +168,7 @@
             </div>
           </div>
         </a>
+
         <a class="carte" href="LeDelicedesSens.html#ancre">
           <div class="carte__img">
             <img
@@ -169,12 +187,14 @@
             </div>
           </div>
         </a>
+
       </div>
     </section>
 
+
+    <!-- FOOTER -->
     <footer class="footer">
-      <!-- <div class="footer__logo"> -->
-      <!-- <img class="footer__logo__img" src="images\logo\ohmyfood@2x.svg" alt="logo"> </div>-->
+     
       <h3 class="footer__logoBlanc">ohmyfood</h3>
 
       <ul class="footer__menu">
